// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignmentGradeFilter Component snapshots buttons and groups disabled if no selected assignment 1`] = `
<React.Fragment>
  <div
    className="row"
  >
    <div
      className="col-5 pr-0"
    >
      <PercentGroup
        disabled={true}
        id="assignmentGradeMin"
        label={
          <FormattedMessage
            defaultMessage="Min Grade"
            description="Min-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.minGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMin]}
        value="2"
      />
    </div>
    <div
      className="col-5 pr-0"
    >
      <PercentGroup
        disabled={true}
        id="assignmentGradeMax"
        label={
          <FormattedMessage
            defaultMessage="Max Grade"
            description="Max-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.maxGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMax]}
        value="98"
      />
    </div>
  </div>
  <div
    className="text-right"
  >
    <ForwardRef
      active={false}
      disabled={true}
      name="assignmentGradeMinMax"
      onClick={[MockFunction handleSubmit]}
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </ForwardRef>
  </div>
</React.Fragment>
`;

exports[`AssignmentGradeFilter Component snapshots smoke test 1`] = `
<React.Fragment>
  <div
    className="row"
  >
    <div
      className="col-5 pr-0"
    >
      <PercentGroup
        disabled={false}
        id="assignmentGradeMin"
        label={
          <FormattedMessage
            defaultMessage="Min Grade"
            description="Min-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.minGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMin]}
        value="2"
      />
    </div>
    <div
      className="col-5 pr-0"
    >
      <PercentGroup
        disabled={false}
        id="assignmentGradeMax"
        label={
          <FormattedMessage
            defaultMessage="Max Grade"
            description="Max-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.maxGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMax]}
        value="98"
      />
    </div>
  </div>
  <div
    className="text-right"
  >
    <ForwardRef
      active={false}
      disabled={false}
      name="assignmentGradeMinMax"
      onClick={[MockFunction handleSubmit]}
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </ForwardRef>
  </div>
</React.Fragment>
`;
